--- a/index.html
+++ b/index.html
@@ -9,23 +9,29 @@
 </head>
 <body>
     <h1>Dasmoto's Arts and Crafts</h1>
-    <h2 id="bgB">Brushes</h2>
-    <img src="images/hacksaw.jpeg" alt="brush image">
-    <h3>Hacksaw Brushes</h3>
-    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. 
-    Available in different sizes. <span>Starting at $3.00 / brush.</span>
-    </p>
-    <h2 id="bgF">Frames</h2>
-    <img src="images/frames.jpeg" alt="frames image">
-    <h3>Art Frames (assorted)</h3>
-    <p>Assorted frames made of different material, including MDF, birchwood, and PDE. 
-    Select frames can be sanded and painted according to your needs. <span>Starting at $2.00 / frame.</span>
-    </p>
-    <h2 id="bgP">Paint</h2>
-    <img src="images/finnish.jpeg" alt="paint image">
-    <h3>Clean Finnish Paint</h3>
-    <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). 
-    Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span>Starting at $5.00 / tube.</span>
-    </p>
+    <div>
+        <h2 id="bgB">Brushes</h2>
+        <img src="images/hacksaw.jpeg" alt="brush image">
+        <h3>Hacksaw Brushes</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. 
+        Available in different sizes. <span>Starting at $3.00 / brush.</span>
+        </p>
+    </div>
+    <div>
+        <h2 id="bgF">Frames</h2>
+        <img src="images/frames.jpeg" alt="frames image">
+        <h3>Art Frames (assorted)</h3>
+        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. 
+        Select frames can be sanded and painted according to your needs. <span>Starting at $2.00 / frame.</span>
+        </p>
+    </div>
+    <div>
+        <h2 id="bgP">Paint</h2>
+        <img src="images/finnish.jpeg" alt="paint image">
+        <h3>Clean Finnish Paint</h3>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). 
+        Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span>Starting at $5.00 / tube.</span>
+        </p>
+    </div>
 </body>
 </html>
